# dut-box

./: .gitignore  Cargo.toml  README.md
crates/assets/: Cargo.toml
locales/: en.yml  zh-CN.yml
ui/: Cargo.toml
ui/src/: i18n.rs  lib.rs  main.rs
ui/src/app/: actions.rs  app_menus.rs  app_state.rs  embedded_themes.rs  mod.rs  system_tray.rs  themes.rs  title_bar.rs
ui/src/layout/: mod.rs
ui/src/pages/: mod.rs  welcome.rs
ui/src/pages/about/: about.rs  mod.rs
ui/src/pages/task/: task_manager.rs
web/: Cargo.toml  README.md
web/scripts/: build-wasm.sh
web/src/: lib.rs
web/www/: index.html  package.json  vite.config.js
web/www/src/: main.js
