[workspace]
members = ["ui", "web", "crates/assets"]
resolver = "2"

# WASM 兼容（与 gpui-component demo 一致）
# - gpui 用 zed 仓库，避免 wasm 下拉入 rustix/calloop
[patch.crates-io]
gpui = {git = "https://github.com/zed-industries/zed"}
psm = {git = "https://github.com/rust-lang/stacker", branch = "master"}

[workspace.package]
edition = "2024"
publish = false

[workspace.dependencies]
anyhow = "1"

# 与 gpui-component demo 一致：整站用 zed 的 gpui，wasm 才不会拉入 rustix/calloop
gpui = {git = "https://github.com/zed-industries/zed"}
gpui_macros = {git = "https://github.com/zed-industries/zed"}
gpui_platform = {git = "https://github.com/zed-industries/zed", features = ["font-kit", "x11", "wayland", "runtime_shaders"]}
gpui_web = {git = "https://github.com/zed-industries/zed"}
reqwest_client = {git = "https://github.com/zed-industries/zed"}
sum-tree = {version = "0.2.0", package = "zed-sum-tree"}

reqwest = {git = "https://github.com/zed-industries/reqwest.git", rev = "c15662463bda39148ba154100dd44d3fba5873a4", default-features = false, features = [
  "charset",
  "http2",
  "macos-system-configuration",
  "multipart",
  "rustls-tls-native-roots",
  "socks",
  "stream",
], package = "zed-reqwest", version = "0.12.15-zed"}

# 本项目直接复用 demo 中 vendored 的 gpui-component 源码，避免与 crates.io 版本的类型不兼容
gpui-component = {path = "../../demo/gpui-component/crates/ui", version = "0.5.1"}

rust-embed = {version = "8", features = ["interpolate-folder-path"]}

log = "0.4"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1"
tracing = "0.1.41"

rust-i18n = "3"

[workspace.lints.clippy]
