[package]
edition = "2024"
name = "dut-box"
version = "0.1.0"

[dependencies]
anyhow.workspace = true
gpui-component.workspace = true
gpui.workspace = true
gpui_platform.workspace = true
rust-i18n.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

rust-embed.workspace = true
tracing-subscriber = {version = "0.3.22", features = ["env-filter", "fmt", "registry"], default-features = false}

[dependencies.dut-box-assets]
path = "../crates/assets"

# Native-only dependencies (not available on WASM)
[target.'cfg(not(target_family = "wasm"))'.dependencies]
reqwest_client.workspace = true

[target.'cfg(target_family = "wasm")'.dependencies]
gpui_web.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
gtk = {version = "0.18"}

[profile.release]
lto = true
opt-level = 3
