[package]
description = "Default bundled assets for DUT Box."
documentation = "https://docs.rs/dut-box"
edition.workspace = true
homepage = "https://github.com/htui/dut-box"
keywords = ["desktop", "gpui", "shadcn", "ui", "uikit"]
license = "Apache-2.0"
name = "dut-box-assets"
publish = false
readme = "README.md"
repository = "https://github.com/htui/dut-box"
version = "0.1.0"

[lib]
doctest = false

[dependencies]
anyhow.workspace = true
gpui.workspace = true
log.workspace = true

[target.'cfg(not(target_family = "wasm"))'.dependencies]
rust-embed = {version = "8.7.2", features = ["interpolate-folder-path", "include-exclude"]}

[target.'cfg(target_family = "wasm")'.dependencies]
reqwest = {workspace = true}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
